[package]
name = "rython"
version = "0.0.1"
description = ""
authors = ["Emanuel"]
license = "MIT"
repository = "https://github.com//rython"
readme = "README.md"
keywords = ["compiler", "bootloader", "assembly", "bios", "uefi", "low-level"]
categories = ["command-line-utilities", "development-tools", "systems-programming"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Remove the [features] section entirely since we don't need conditional compilation
# Or keep it simple if you really want features:

[features]
default = ["bios"]
bios = []
sse = []
avx = []
avx512 = []